# ha-remote-tts

./: README.md  pyproject.toml  ruff.toml
examples/glados-tts/: LICENSE  README.md  demo.py  glados.py
ha_remote_tts/: lib.py
