[tool.poetry]
name = "ha-remote-tts"
version = "0.1.4"
description = "API wrapper for the Remote TTS integration of Home Assistant"
authors = ["NicolasNewman <nanewman01@gmail.com>"]
readme = "README.md"
packages = [{ include = "ha_remote_tts" }]
license = "MIT"
repository = "https://github.com/NicolasNewman/ha-remote-tts"

[tool.poetry.dependencies]
python = "^3.10"
# use this if running demo-glados-tts
# python = ">=3.10,<3.12"
aiohttp = "^3.10.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"

[tool.poetry.group.demo-glados-tts]
optional = true

[tool.poetry.group.demo-glados-tts.dependencies]
deep-phonemizer = ">=0.0.19,<0.1.0"
flask = ">=3.0.0,<3.1.0"
inflect = ">=6.0.4,<6.1.0"
nltk = ">=3.8.1,<3.9.0"
numpy = ">=1.23.5,<1.24.0"
pandas = ">=2.0.0,<2.1.0"
pydub = ">=0.25.1,<0.26.0"
scipy = ">=1.10.1,<1.11.0"
torch = { version = ">=2.0.0,<2.1.0", source = "pytorch_cpu" }
tqdm = ">=4.65.0,<4.66.0"
unidecode = ">=1.3.6,<1.4.0"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
